--- a/Plataforma/navidad/index.html
+++ b/Plataforma/navidad/index.html
@@ -196,7 +196,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula732.html">
+  <a href="../../Peliculas/pelicula732.html">
     <img src="https://image.tmdb.org/t/p/original/n12wESAYZNqa88h4EzdD25bJRYR.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -206,7 +206,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Codigo: Traje rojo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula723.html">
+  <a href="../../Peliculas/pelicula723.html">
     <img src="https://image.tmdb.org/t/p/original/dpskAcm71w5v8zQ8RmPmJiP31Om.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -216,7 +216,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- El extrano mundo de Jack -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula680.html">
+  <a href="../../Peliculas/pelicula680.html">
     <img src="https://image.tmdb.org/t/p/original/pqFPpQ77VZ0moRgRRsxx7p39CS3.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -226,7 +226,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">1993</div>
 </article><!-- Mi pobre y dulce angelito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula687.html">
+  <a href="../../Peliculas/pelicula687.html">
     <img src="https://image.tmdb.org/t/p/original/5K7qxX77PJXWuzkZD8rOBduCEKo.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -236,7 +236,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2021</div>
 </article><!-- Mi pobre angelito 5 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula686.html">
+  <a href="../../Peliculas/pelicula686.html">
     <img src="https://image.tmdb.org/t/p/original/nxxcHTbqNrEkrJvtCzxzm3TDtU.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -246,7 +246,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2012</div>
 </article><!-- Mi pobre angelito 4 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula685.html">
+  <a href="../../Peliculas/pelicula685.html">
     <img src="https://image.tmdb.org/t/p/original/q9BAc2Q37oQWcRlMKUkuRilJ90E.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -256,7 +256,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2002</div>
 </article><!-- Mi pobre angelito 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula684.html">
+  <a href="../../Peliculas/pelicula684.html">
     <img src="https://image.tmdb.org/t/p/original/720eeviFT6G8SStX2lEgFsYzqAp.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -266,7 +266,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">1997</div>
 </article><!-- Mi pobre angelito 2: Perdido en Nueva York -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula683.html">
+  <a href="../../Peliculas/pelicula683.html">
     <img src="https://image.tmdb.org/t/p/original/7sdiRUyc0ANHJptPhsgb1KL6hoq.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -276,7 +276,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">1992</div>
 </article><!-- Mi pobre angelito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula682.html">
+  <a href="../../Peliculas/pelicula682.html">
     <img src="https://image.tmdb.org/t/p/original/rjc2a9N5pro1xGsSvvnJ1JDXRGm.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -286,7 +286,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">1990</div>
 </article><!-- Casi un cuento navideno -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula513.html">
+  <a href="../../Peliculas/pelicula513.html">
     <img src="https://image.tmdb.org/t/p/original/j7dQpQ6BwYQLqmf4mXINfzEViZI.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -296,7 +296,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Cuento de Navidad de Mickey -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula505.html">
+  <a href="../../Peliculas/pelicula505.html">
     <img src="https://image.tmdb.org/t/p/original/pjltlCLjgdqzzrO9Bqchsh3SqgB.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -307,7 +307,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </article>
 <!-- Como Entrenar a Tu Dragon: El regalo de Furia Nocturna -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula241.html">
+  <a href="../../Peliculas/pelicula241.html">
     <img src="https://image.tmdb.org/t/p/original/qwUYVh1ogG8tsDWQli18akSXHEt.jpg" alt="Cómo Entrenar a Tu Dragón: El regalo de Furia Nocturna" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
