--- a/Plataforma/nickelodeon/index.html
+++ b/Plataforma/nickelodeon/index.html
@@ -221,7 +221,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Oye, Arnold! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie73.html">
+  <a href="../../Series/serie73.html">
     <img src="https://image.tmdb.org/t/p/original/1aHnP8oed54UMLEvTlY7VBl069q.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -231,7 +231,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">1996</div>
 </article><!-- Kamp Koral: Los primeros anos de Bob Esponja -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie63.html">
+  <a href="../../Series/serie63.html">
     <img src="https://image.tmdb.org/t/p/original/mC23fANjhD5xDrlpq1bzllL2sEW.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -241,7 +241,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2021</div>
 </article><!-- El Mejor Jugador -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula605.html">
+  <a href="../../Peliculas/pelicula605.html">
     <img src="https://image.tmdb.org/t/p/original/gLdUG7ZmEDfNeBu2s0KrlgTFwCl.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -251,7 +251,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2011</div>
 </article><!-- Nacho Libre -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula303.html">
+  <a href="../../Peliculas/pelicula303.html">
     <img src="https://image.tmdb.org/t/p/original/uU6ZEMgsnDlHXLgkppJxRuzMOeh.jpg" alt="Nacho Libre" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -261,7 +261,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2006</div>
 </article><!-- iCarly -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie47.html">
+  <a href="../../Series/serie47.html">
     <img src="https://image.tmdb.org/t/p/original/tM4P2RNIIFzFJi7UngNVB80sRCp.jpg" alt="iCarly" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -272,7 +272,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </article>
 <!-- Bob Esponja 3: Al Rescate -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula185.html">
+  <a href="../../Peliculas/pelicula185.html">
     <img src="https://image.tmdb.org/t/p/original/fi2pg2mtAZwhq3qVuAs6PztjnHT.jpg" alt="Bob Esponja 3: Al Rescate" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -285,7 +285,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- Bob Esponja: Un heroe fuera del agua -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula184.html">
+  <a href="../../Peliculas/pelicula184.html">
     <img src="https://image.tmdb.org/t/p/original/z5aphafm6OEcAq4jwOs5Ml9F384.jpg" alt="Bob Esponja: Un héroe fuera del agua" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
