--- a/Plataforma/primevideo/index.html
+++ b/Plataforma/primevideo/index.html
@@ -220,7 +220,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Codigo: Traje rojo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula723.html">
+  <a href="../../Peliculas/pelicula723.html">
     <img src="https://image.tmdb.org/t/p/original/dpskAcm71w5v8zQ8RmPmJiP31Om.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -230,7 +230,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Apocalipsis Z: el principio del fin -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula692.html">
+  <a href="../../Peliculas/pelicula692.html">
     <img src="https://image.tmdb.org/t/p/original/jaBToJ1DZcwn5wOsQeLOXFVlBLn.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -240,7 +240,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Rescate implacable -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula641.html">
+  <a href="../../Peliculas/pelicula641.html">
     <img src="https://image.tmdb.org/t/p/original/aG50Ad3UV8cCQWpNWSHHUqgKGNB.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -250,7 +250,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- El jardinero -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula638.html">
+  <a href="../../Peliculas/pelicula638.html">
     <img src="https://image.tmdb.org/t/p/original/sVuYUl7EtBxyJTOl4Ao7eZVjKDb.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -260,7 +260,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- Ash -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula637.html">
+  <a href="../../Peliculas/pelicula637.html">
     <img src="https://image.tmdb.org/t/p/original/5Oz39iyRuztiA8XqCNVDBuy2Ut3.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -270,7 +270,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- El contador 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula630.html">
+  <a href="../../Peliculas/pelicula630.html">
     <img src="https://image.tmdb.org/t/p/original/jcV9YfjBRo6occxqeWtEiyWwMoG.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -280,7 +280,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- El hombre del saco -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula606.html">
+  <a href="../../Peliculas/pelicula606.html">
     <img src="https://image.tmdb.org/t/p/original/3EdqlGB2ACpnqsrtKhyacaPhzHK.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -290,7 +290,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2023</div>
 </article><!-- The Boys -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie59.html">
+  <a href="../../Series/serie59.html">
     <img src="https://image.tmdb.org/t/p/original/5kgY14oisiHcJ4zq0Xgq1e97PHm.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -300,7 +300,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Novata Espacial -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula445.html">
+  <a href="../../Peliculas/pelicula445.html">
     <img src="https://image.tmdb.org/t/p/original/oYx9AVIrZaVZ2PezSZvOOjtB75a.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -310,7 +310,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Juegos de Seduccion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula419.html">
+  <a href="../../Peliculas/pelicula419.html">
     <img src="https://image.tmdb.org/t/p/original/s91PuVwq8jwDtrCWjkpF63rZgyX.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -320,7 +320,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- Nadie nos va a extranar -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie52.html">
+  <a href="../../Series/serie52.html">
     <img src="https://image.tmdb.org/t/p/original/py0s87C9214KRbZ4kWLQfgsE9ET.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -330,7 +330,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Padre no hay mas que uno 4: Campanas de boda -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula301.html">
+  <a href="../../Peliculas/pelicula301.html">
     <img src="https://image.tmdb.org/t/p/original/hTMvGolGJLF0GQ7mlwNjbXpsPZ.jpg" alt="Padre no hay más que uno 4: Campanas de boda" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -340,7 +340,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Padre no hay mas que uno 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula300.html">
+  <a href="../../Peliculas/pelicula300.html">
     <img src="https://image.tmdb.org/t/p/original/k2v9xSPtiyxCNxaRGtj7COwdgG3.jpg" alt="Padre no hay más que uno 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -350,7 +350,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Padre no hay mas que uno 2: La llegada de la suegra -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula298.html">
+  <a href="../../Peliculas/pelicula298.html">
     <img src="https://image.tmdb.org/t/p/original/7MjODwcPV5tAEa1zlje9N4gReGS.jpg" alt="Padre no hay más que uno 2: La llegada de la suegra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -360,7 +360,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2020</div>
 </article><!-- Padre no hay mas que uno -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula297.html">
+  <a href="../../Peliculas/pelicula297.html">
     <img src="https://image.tmdb.org/t/p/original/eDLO2nr5xhjOfxDAj3gQao495kw.jpg" alt="Padre no hay más que uno" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -370,7 +370,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Cuenta regresiva -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie34.html">
+  <a href="../../Series/serie34.html">
     <img src="https://image.tmdb.org/t/p/original/p69fxSp0XoKXhaPduoUNBse3ibt.jpg" alt="Cuenta regresiva" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -380,7 +380,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- El verano en que me enamore -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie33.html">
+  <a href="../../Series/serie33.html">
     <img src="https://image.tmdb.org/t/p/original/wDeFJIE5chr2P8iKW6HjyHKNm8x.jpg" alt="El verano en que me enamoré" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -390,7 +390,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Cenicienta -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula220.html">
+  <a href="../../Peliculas/pelicula220.html">
     <img src="https://image.tmdb.org/t/p/original/oU0JRNrzpEWSH2pXzSiiNL76KSq.jpg" alt="Cenicienta" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -400,7 +400,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2021</div>
 </article><!-- La Guerra Del Manana -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula214.html">
+  <a href="../../Peliculas/pelicula214.html">
     <img src="https://image.tmdb.org/t/p/original/tzp6VzED2TBc02bkYoYnQa6r2OK.jpg" alt="La Guerra Del Mañana" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -412,7 +412,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- Reacher -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie10.html">
+  <a href="../../Series/serie10.html">
     <img src="https://image.tmdb.org/t/p/original/6iuVqg86hJPwTWAO1TDWKLxjgn4.jpg" alt="Reacher" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
