--- a/Plataforma/vix/index.html
+++ b/Plataforma/vix/index.html
@@ -222,7 +222,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
     <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Instintos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula373.html">
+  <a href="../../Peliculas/pelicula373.html">
     <img src="https://image.tmdb.org/t/p/original/rsq6n6eTiUbs5yGnsuY1HRGoQXt.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
