--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between" style="background:var(--nav-bg); box-shadow: 0 6px 18px rgba(2,6,10,0.6);">
     <div class="flex items-center gap-4">
       <!-- Botón de ajustes con enlace -->
-<a href="https://lz.blogdepelis.lat/HOME/ajustes.html" class="text-white text-lg">
+<a href="HOME/ajustes.html" class="text-white text-lg">
   <i class="fas fa-cog"></i>
 </a>
 
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     <div class="flex items-center gap-4">
     <button aria-label="Buscar" 
         class="text-white text-lg hover:text-yellow-400 transition"
-        onclick="window.location.href='https://lz.blogdepelis.lat/SEARCH/index.html'">
+        onclick="window.location.href='SEARCH/index.html'">
   <i class="fas fa-search"></i>
 </button>
 
@@ -761,6 +761,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
