--- a/HOME/login.html
+++ b/HOME/login.html
@@ -194,7 +194,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const btnCompartir = document.getElementById('btnCompartir');
 
   const DEFAULT_AVATAR = 'https://i.pinimg.com/736x/91/86/1b/91861b749841221d52122f0c2933d8a6.jpg';
-  const LOGIN_URL = 'https://lz.blogdepelis.lat/';
+  const LOGIN_URL = '../index.html';
   const SHARE_URL = 'https://dlz.blogdepelis.lat/';
   const TOKEN = btoa('UserLzPlay');
   const SLIDE_INTERVAL = 4000;
