--- a/HOME/ajustes.html
+++ b/HOME/ajustes.html
@@ -282,7 +282,7 @@
 <body>
   <main role="main" aria-label="Ajustes del usuario">
    <header> <h1>Ajustes</h1>
- <a href="https://lz.blogdepelis.lat/" aria-label="Regresar" class="text-red-600 hover:text-red-700 transition font-semibold">
+ <a href="../index.html" aria-label="Regresar" class="text-red-600 hover:text-red-700 transition font-semibold">
     <i class="fas fa-arrow-left mr-1"></i> Regresar
   </a>
 
@@ -522,6 +522,7 @@ confirmLogout.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
