--- a/HOME/ajustes.html
+++ b/HOME/ajustes.html
@@ -501,7 +501,7 @@ cancelLogout.addEventListener('click', () => {
 
 confirmLogout.addEventListener('click', () => {
   // Redirigir al login en vez de intentar cerrar ventana
-  window.location.href = 'https://lz.blogdepelis.lat/HOME/login.html';
+  window.location.href = 'https://www.google.com/';
 });
 
     // Cargar icono guardado si existe
@@ -522,6 +522,7 @@ confirmLogout.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
