--- a/index.html
+++ b/index.html
@@ -426,7 +426,62 @@ document.addEventListener("DOMContentLoaded", async () => {
       </div>
 
 </main>
-	
+	  <!-- Notificación Nueva Peli/Serie -->
+<div id="lzNotifOverlay"></div>
+<div id="lzNotif" style="position:fixed;top:-200px;left:50%;transform:translateX(-50%);width:95%;max-width:400px;background:rgba(0,25,80,0.85);backdrop-filter:blur(10px);border:2px solid #0066ff;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.5);padding:12px;display:flex;align-items:center;gap:12px;z-index:999;opacity:0;transition:top 0.5s ease,opacity 0.5s ease;">
+  
+  <img id="lzNotifImg" src="https://image.tmdb.org/t/p/original/7PrYIElYKMIMGkXynzUpf8hCZ8J.jpg" alt="Nuevo capítulo" style="width:80px;height:80px;object-fit:cover;border-radius:8px;flex-shrink:0;border:2px solid rgba(255,255,255,0.2);">
+  
+  <div style="flex:1;min-width:0;">
+    <h2 id="lzNotifTitle" style="font-size:16px;margin:0 0 4px;color:#fff;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">Capítulo 9 Disponible "Bon Appétit"</h2>
+    <p id="lzNotifText" style="font-size:13px;color:#ccc;margin:0 0 8px;">Explora el arte de la cocina como nunca antes.</p>
+    <button id="lzNotifBtn" style="background:#0066ff;border:none;color:#fff;padding:6px 12px;font-size:13px;border-radius:6px;cursor:pointer;font-weight:bold;">Ver ahora</button>
+  </div>
+  
+  <!-- Botón cerrar -->
+  <span id="lzNotifClose" style="color:#fff;font-size:20px;cursor:pointer;font-weight:bold;align-self:flex-start;">&times;</span>
+</div>
+
+<script>
+  // Mostrar notificación al cargar
+  window.addEventListener("load", function() {
+    var notif = document.getElementById("lzNotif");
+    var overlay = document.getElementById("lzNotifOverlay");
+    overlay.style.position = "fixed";
+    overlay.style.top = "0";
+    overlay.style.left = "0";
+    overlay.style.width = "100%";
+    overlay.style.height = "100%";
+    overlay.style.display = "block";
+    overlay.style.zIndex = "998";
+    overlay.style.background = "transparent";
+
+    notif.style.top = "10px";
+    notif.style.opacity = "1";
+
+    // Opcional: cerrar automáticamente tras 5s
+    // setTimeout(cerrarNotif, 5000);
+  });
+
+  // Acción "Ver ahora"
+  document.getElementById("lzNotifBtn").addEventListener("click", function() {
+    window.location.href = "Series/serie32.html";
+  });
+
+  // Botón cerrar (X)
+  document.getElementById("lzNotifClose").addEventListener("click", cerrarNotif);
+
+  // Cerrar clic fuera
+  document.getElementById("lzNotifOverlay").addEventListener("click", cerrarNotif);
+
+  function cerrarNotif() {
+    var notif = document.getElementById("lzNotif");
+    var overlay = document.getElementById("lzNotifOverlay");
+    notif.style.top = "-200px";
+    notif.style.opacity = "0";
+    overlay.style.display = "none";
+  }
+</script>
 <footer class="bg-[#081423] text-white mt-12">
   <div class="max-w-6xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-3 gap-6">
     
@@ -751,6 +806,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
