--- a/Peliculas/pelicula1.html
+++ b/Peliculas/pelicula1.html
@@ -57,10 +57,8 @@
       </p>
     </div>
 </div>
-  <div id="contenedor" style="position: relative; width: 100%; height: 500px; overflow: hidden; border: 1px solid #000;">
-  <div id="anuncio" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
-  <script>(function(s){s.dataset.zone='9913838',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-  </div>
+<div id="contenedor" style="position: relative; width: 100%; height: 500px; overflow: hidden;">
+  <iframe src="<script>(function(s){s.dataset.zone='9913838',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>" style="width: 100%; height: 100%; border: none;"></iframe>
 </div>
 
 <script>
