Crear/Actualizar Categorias/aventura/index.html

--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Cronicas de Navidad -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula734.html">
+    <img src="https://image.tmdb.org/t/p/original/qz2dTKSQ9VSAswb1O9jWS15jqL1.jpg" alt="Las Crónicas de Navidad" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Las Crónicas de Navidad</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula732.html">
     <img src="https://image.tmdb.org/t/p/original/n12wESAYZNqa88h4EzdD25bJRYR.jpg" alt="Cómo Entrenar a tu Dragón: Regreso a Casa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
