Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Upgrade -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Cronicas de Navidad -->
+<li>
+  <a href="../Peliculas/pelicula734.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qz2dTKSQ9VSAswb1O9jWS15jqL1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las Crónicas de Navidad 2018</span>
+    <span class="hidden">Kate Pierce y su hermano Teddy pretenden grabar a Papá Noel en Nochebuena. Después de que se monten a escondidas en su trineo, provocan un accidente que podría arruinar toda la Navidad. A partir de ese momento los hermanos vivirán junto a Papá Noel y sus fieles elfos toda una serie de aventuras para salvar la Navidad antes de que sea demasiado tarde.</span>
+  </a>
+</li>
+<!--FIN--><!-- Upgrade -->
 <li>
   <a href="../Peliculas/pelicula733.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
