--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El expreso polar -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula735.html">
+    <img src="https://image.tmdb.org/t/p/original/ja6QGEUkP8t3wjjoHYvpRStomlT.jpg" alt="El expreso polar" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El expreso polar</div>
+  <div class="text-xs text-white/70">2004</div>
+</article><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula732.html">
     <img src="https://image.tmdb.org/t/p/original/n12wESAYZNqa88h4EzdD25bJRYR.jpg" alt="Cómo Entrenar a tu Dragón: Regreso a Casa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
