--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Cronicas de Navidad -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El expreso polar -->
+<li>
+  <a href="../Peliculas/pelicula735.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ja6QGEUkP8t3wjjoHYvpRStomlT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El expreso polar 2004</span>
+    <span class="hidden">En Nochebuena, un niño se embarca en una aventura mágica hacia el Polo Norte en el Expreso Polar, mientras aprende sobre la amistad, la valentía y el espíritu de la Navidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Las Cronicas de Navidad -->
 <li>
   <a href="../Peliculas/pelicula734.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
