--- a/Plataforma/warnerbros/index.html
+++ b/Plataforma/warnerbros/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ace Ventura: Un Loco En Africa -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El expreso polar -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula735.html">
+    <img src="https://image.tmdb.org/t/p/original/ja6QGEUkP8t3wjjoHYvpRStomlT.jpg" alt="El expreso polar" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El expreso polar</div>
+  <div class="text-xs text-white/70">2004</div>
+</article><!-- Ace Ventura: Un Loco En Africa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula720.html">
     <img src="https://image.tmdb.org/t/p/original/899yWih4ic8AyczedYiX41g7TvQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
