--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Doble Impacto -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como agua para chocolate -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie81.html">
+    <img src="https://image.tmdb.org/t/p/original/cGdOB0ld7eIpd5GlZg5DOZX8HPK.jpg" alt="Como agua para chocolate" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Como agua para chocolate</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Doble Impacto -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula728.html">
     <img src="https://image.tmdb.org/t/p/original/8xoizvqv9k0Am1vNQrTHkVFXzBE.jpg" alt="Doble Impacto" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
