Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El expreso polar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Como agua para chocolate -->
+<li>
+  <a href="../Series/serie81.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/cGdOB0ld7eIpd5GlZg5DOZX8HPK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Como agua para chocolate 2024</span>
+    <span class="hidden">Tita De la Garza y Pedro Múzquiz, son dos almas enamoradas que no pueden estar juntos debido a arraigadas costumbres familiares. Entonces Tita navega los tintes y sabores mágicos entre el destino dictado por su familia y la lucha por su amor en la cocina, su mayor refugio. Adaptación de HBO de la novela de Laura Esquivel.</span>
+  </a>
+</li>
+<!--FIN--><!-- El expreso polar -->
 <li>
   <a href="../Peliculas/pelicula735.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
