--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Cronicas de Navidad -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Cronicas de Navidad 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula736.html">
+    <img src="https://image.tmdb.org/t/p/original/3LHAGdZxlEa8N4FDAlOkSX1Bw6R.jpg" alt="Las Crónicas de Navidad 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Las Crónicas de Navidad 2</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Las Cronicas de Navidad -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula734.html">
     <img src="https://image.tmdb.org/t/p/original/qz2dTKSQ9VSAswb1O9jWS15jqL1.jpg" alt="Las Crónicas de Navidad" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
