--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Como agua para chocolate -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Cronicas de Navidad 2 -->
+<li>
+  <a href="../Peliculas/pelicula736.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3LHAGdZxlEa8N4FDAlOkSX1Bw6R.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las Crónicas de Navidad 2 2020</span>
+    <span class="hidden">Kate Pierce (Darby Camp), que ahora es una cínica adolescente, se reúne inesperadamente con Santa Claus (Kurt Russell) cuando un misterioso malhechor amenaza con destruir la Navidad para siempre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Como agua para chocolate -->
 <li>
   <a href="../Series/serie81.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
