--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Cronicas de Navidad 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hernan -->
+<li>
+  <a href="../Series/serie82.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/adJ2jnpz77ai4coQqNzzBQ0OiXN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Hernán 2019</span>
+    <span class="hidden">La conquista de México: cada episodio contado por alguien que conoció de cerca al conquistador. ¿Cómo pudo un hombre, con unos cuantos cientos de soldados, someter a un imperio de guerreros en la cima de su gloria? Hernán es la respuesta.</span>
+  </a>
+</li>
+<!--FIN--><!-- Las Cronicas de Navidad 2 -->
 <li>
   <a href="../Peliculas/pelicula736.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
