--- a/HOME/login.html
+++ b/HOME/login.html
@@ -157,7 +157,8 @@ button {
 
   gtag('config', 'G-PC9JETB0VP');
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5488063407481298"
+     crossorigin="anonymous"></script>
 </head>
 <body class="flex flex-col justify-center items-center min-h-screen relative">
 
