--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Cronicas de Navidad 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman Azteca: Choque de imperios -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula737.html">
+    <img src="https://image.tmdb.org/t/p/original/wpMaI2J3ISYZiaIWNkoA1lVb5LQ.jpg" alt="Batman Azteca: Choque de imperios" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman Azteca: Choque de imperios</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Las Cronicas de Navidad 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula736.html">
     <img src="https://image.tmdb.org/t/p/original/3LHAGdZxlEa8N4FDAlOkSX1Bw6R.jpg" alt="Las Crónicas de Navidad 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
