--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hernan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman Azteca: Choque de imperios -->
+<li>
+  <a href="../Peliculas/pelicula737.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wpMaI2J3ISYZiaIWNkoA1lVb5LQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman Azteca: Choque de imperios 2025</span>
+    <span class="hidden">En la época del Imperio Azteca, Yohualli Coatl, un joven azteca, experimenta una tragedia cuando su padre y líder de la aldea, Toltecatzin, es asesinado por los conquistadores españoles. Yohualli escapa a Tenochtitlán para advertir al rey Moctezuma y a su sumo sacerdote, Yoka, del peligro inminente. Usando el templo de Tzinacan, el dios murciélago, como guarida, Yohualli entrena con su mentor y asistente, Acatzin, desarrollando equipo y armamento para enfrentar la invasión española, proteger el templo de Moctezuma y vengar la muerte de su padre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Hernan -->
 <li>
   <a href="../Series/serie82.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
