--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman Azteca: Choque de imperios -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ted -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula738.html">
+    <img src="https://image.tmdb.org/t/p/original/1DY7eSoQLoTNhJTT455N74VuHHx.jpg" alt="Ted" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ted</div>
+  <div class="text-xs text-white/70">2012</div>
+</article><!-- Batman Azteca: Choque de imperios -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula737.html">
     <img src="https://image.tmdb.org/t/p/original/wpMaI2J3ISYZiaIWNkoA1lVb5LQ.jpg" alt="Batman Azteca: Choque de imperios" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
